--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,15 @@
             <version>6.1.5.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
